fix alignment on jobs table

--- a/src/components/JobsHeader/JobsHeader.module.css
+++ b/src/components/JobsHeader/JobsHeader.module.css
@@ -19,7 +19,6 @@
   justify-content: start;
   align-items: center;
   height: 100%;
-  padding-left: 5px;
 }
 
 .container div:nth-child(1):hover,
